# ssynth

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  clean.sh  main.py  osc.py  test_ssynth.py
Filter/: envelope.py  filter.py
Filter/Raw/: low_and_high_filter.cpp
Osc/: bindings.cpp  osc.py  wavemanager.py  wavetable.cpp  wavetable.h
Osc/tables/: saw.wvt  square.wvt  triangle.wvt
bindings/: main_bindings.cpp
engine/include/: audiobuffer.h  defs.h  engine.h  envelope.h  osc.h  utils.h  voice.h  wavetable.h
engine/src/: engine.cpp  low_and_high_filter.cpp  voice.cpp  wavetable.cpp
frontend/gui/: adsr.py  button.py  knob.py  osc_panel.py  window_gui.py
frontend/gui/visual/: visualizer.py
frontend/gui/visual/spectrogram/: spectrogram_frame.py  spectrogram_widget.py
gui/: button.py  knob.py  main_gui.py  window_gui.py
gui/visual/: visualizer.py
gui/visual/spectrogram/: bindings_spectrogram.cpp  fftw_setup.cpp  fftw_setup.h  spectrogram_vis.cpp  spectrogram_vis.h  spectrogram_widget.py
misc/: logger.py
tables/: saw.wvt  sine.wvt  square.wvt  triangle.wvt
user/: default.json
